samples/_failures_safe/1761173805_7f9255_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_093c9d76.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_093c9d76.c:183: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_093c9d76.c:182:5: error: expected declaration or statement at end of input
  182 |     for
      |     ^~~
